--- a/Udayanga_0000000/new_page.html
+++ b/Udayanga_0000000/new_page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="image-container">
-    <img id="" src="D:\Udayanga_0000000\images" alt="Loaded Image">
+    <img id="" src="images\cat.jpg" alt="Loaded Image">
   </div>
   <script>
     // Retrieve image URL from sessionStorage
