--- a/Web Dev Demo_007/bootstrap.html
+++ b/Web Dev Demo_007/bootstrap.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="jquery-3.7.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <title>Website demo</title>
   <style>
     .login {
@@ -57,7 +59,7 @@
         <img src="img/ijse@1x.png" alt="">
       </div>
       <h1 class="text-center">Login</h1>
-      <form>
+      <form onsubmit="validate(event)">
         <div class="form-group">
           <label for="username" class="form-label">Username</label>
           <input type="username" class="form-control" id="username" placeholder="Enter your Username" required>
@@ -71,6 +73,8 @@
         <div class="forget-password mb-3">
           <a href="#">Forget Your Password?</a>
         </div>
+        <div class="alert alert-success" role="alert" id="valid"> </div>
+             <div class="alert alert-danger" role="alert" id="invalid"> </div>
         <button type="button" class="btn btn-success">Login</button>
       </form>
 
@@ -87,7 +91,98 @@
       window.alert("Hello World");
       console.log("Hello World this is console log");
        </script>
-      
+    
+       <script> 
+             $('#valid').hide();
+        $('#invalid').hide();
+
+
+        function validate(event) {
+            event.preventDefault();
+            let username = $('#username').val();
+            let password = $('#password').val();
+            console.log("username : ", username);
+            console.log("password : ", password);
+            if (username != '' && password != '') {
+                $('#valid').show()
+                $('#invalid').hide();
+                $('#valid').text('This Form is Valid')
+                console.log("Valid");
+            } else {
+                $('#invalid').show();
+                $('#valid').hide();
+                $('#invalid').text("This Form is Invalid")
+                console.log("Invalid");
+            }
+
+
+        }
+      </script>
+      <script>      
+         $.ajax({
+                    method: "GET",
+                    url: "https://jsonplaceholder.typicode.com/posts",
+                    contentType: 'application/json',
+                    async: true,
+                    success: function (data) {
+                        console.log(data)
+                    }
+                })
+         $.ajax({
+                    method: "POST",
+                    url: "https://jsonplaceholder.typicode.com/posts",
+                    contentType: 'application/json',
+                    async: true,
+                    data: JSON.stringify({
+                                  title: 'foo',
+                                  body: 'bar',
+                                  userId: 1,
+                           }),
+                    success: function (data) {
+                        console.log(data)
+                    }
+                })
+                $.ajax({
+                    method: "PUT",
+                    url: "https://jsonplaceholder.typicode.com/posts/1",
+                    contentType: 'application/json',
+                    async: true,
+                    data: JSON.stringify({
+                        id: 1,
+                        title: 'title update',
+                        body: 'body update',
+                        userId: 1,
+                    }),
+                    success: function (data) {
+                        console.log(data)
+                    }
+                })
+                $.ajax({
+                    method: "PATCH",
+                    url: "https://jsonplaceholder.typicode.com/posts/1",
+                    contentType: 'application/json',
+                    async: true,
+                    data: JSON.stringify({
+                        title: 'update using patch',
+
+
+                    }),
+                    success: function (data) {
+                        console.log(data)
+                    }
+                })
+                $.ajax({
+                    method: "DELETE",
+                    url: "https://jsonplaceholder.typicode.com/posts/1",
+                    contentType: 'application/json',
+                    async: true,
+                    success: function (data) {
+                        console.log(data)
+                    }
+                })
+
+
+      </script>
 </body>
 
 </html>
